# ChatBot-

./: README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs  socket1.rs  socket2.rs
public/: index.html  manifest.json
src/: App.css  App.js
src/components/: Background.css  Background.jsx  ChatWindow.jsx  Navigationbar.jsx
src/components/ChatBox/: ChatBox.css  ChatBox.jsx
src/components/Sidebar/: Sidebar.css  Sidebar.jsx
